--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -1,4 +1,4 @@
-<div class="stop-popup"{{#route_id}} data-route_id="{{route_id}}" data-stop_id="{{stop_id}}"{{/route_id}}>
+<div class="stop-popup"{{#route_id}} data-route-id="{{route_id}}" data-stop-id="{{stop_id}}"{{/route_id}}>
   {{#popover}}
     <a class="close-popover pull-right">
       <i class="fa fa-times" aria-hidden="true"></i>
