--- a/app/views/routes/_out_of_route.html.haml
+++ b/app/views/routes/_out_of_route.html.haml
@@ -1,4 +1,5 @@
 - route ||= routes.find{ |route| route[:vehicle_id].nil? }
+- out_pagy ||= nil
 %li.route.out_route{"data-route-id": route[:route_id]}
   #out_of_route.panel.panel-default
     .panel-heading.out-header
@@ -25,6 +26,6 @@
           = render partial: 'routes/edit_head', locals: { route: route }
         %ul#list_box.stops.sortable.list-group{style: ('display: none;' if route[:hidden])}
           = render partial: 'stops/out_list.html.haml', locals: { routes: routes, route: route }
-        - if route[:with_stops]
+        - if route[:with_stops] && out_pagy
           #div_out_list_next_link
             = render partial: 'stops/out_list_next_link', locals: { out_pagy: out_pagy }
