--- a/app/views/stops/_out_list_next_link.html.haml
+++ b/app/views/stops/_out_list_next_link.html.haml
@@ -1,2 +1,5 @@
 %span#out_list_next_link.pagy.d-none
   = pagy_next_a(out_pagy, anchor_string: 'data-remote="true"', page_param: :out_page)
+- if out_pagy.next
+  %span#loading-indicator.out-content.list-group-item.d-flex.justify-content-center.d-none
+    .spinner-border{role: "status"}
