--- a/app/views/stops/_out_list.html.haml
+++ b/app/views/stops/_out_list.html.haml
@@ -39,7 +39,7 @@
                 - routes.each do |o_route|
                   - if o_route[:vehicle_usage_id]
                     %li
-                      %a.send_to_route{href: "/plannings/#{@planning.id}/#{o_route[:route_id]}/#{stop[:stop_id]}/move.json", method: :patch}
+                      %a.send_to_route{href: "/plannings/#{@planning.id}/#{o_route[:route_id]}/#{stop[:stop_id]}/move.js", method: :patch}
                         .color_small{style: "background:#{o_route[:color]}"}
                         = o_route[:name]
           .clearfix
