--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -24,7 +24,7 @@
   </span>
   <ul class="dropdown-menu" role="menu">
     {{#vehicle_name}}
-      <li><a href="/plannings/{{planning_id}}/{{out_of_route_id}}/{{stop_id}}/move/-1.json" class="send_to_route">{{#i18n}}plannings.edit.out_of_route{{/i18n}}</a></li>
+      <li><a href="/plannings/{{planning_id}}/{{out_of_route_id}}/{{stop_id}}/move/-1.js" class="send_to_route">{{#i18n}}plannings.edit.out_of_route{{/i18n}}</a></li>
     {{/vehicle_name}}
     {{#routes}}
       {{#vehicle_usage_id}}
