--- a/app/views/routes/_edit_head.html.haml
+++ b/app/views/routes/_edit_head.html.haml
@@ -247,6 +247,7 @@
       .route-info.inactive
         %i.fa.fa-check-square.fa-fw
         = route[:size]
+        = t('plannings.edit.stops')
   - route[:quantities].each do |unit|
     .col-xs-4.route-data-advanced
       .primary.route-info{class: ('danger' if unit[:out_of_capacity]), title: t('plannings.edit.route_quantity_help')}
