--- a/app/views/stops/_out_list.html.haml
+++ b/app/views/stops/_out_list.html.haml
@@ -1,7 +1,8 @@
 - routes ||= summary[:routes]
+- out_pagy ||= nil
 - route[:stops]&.each&.with_index do |stop, index|
   - if stop[:visits]
-    %li.waypoint.d-fake-flex.align-items-center.list-group-item{ class: ('ui-state-error' if stop[:error]), data: { "stop-id": stop[:stop_id], index: index }}
+    %li.waypoint.d-fake-flex.align-items-center.list-group-item{ class: ('ui-state-error' if stop[:error]), data: { "stop-id": stop[:stop_id], "stop-index": (out_pagy&.offset || 0) + index }}
       .row
         .col-xs-6.col-md-1
           %input{ checked: "checked", style: "display: none", type: "checkbox" }
