--- a/app/views/routes/_edit.html.haml
+++ b/app/views/routes/_edit.html.haml
@@ -1,2 +1,2 @@
 - routes.each do |route|
-  = render partial: 'routes/in_route.html.haml', locals: { route: route }
+  = render partial: 'routes/in_route.html.haml', locals: { route: route, summary: summary }
