--- a/app/views/routes/_in_route.html.haml
+++ b/app/views/routes/_in_route.html.haml
@@ -16,7 +16,7 @@
                     %span
                       %span.color_small{style: "background:#{route[:color]};#{(' display: none;' if route[:color_fake])}"}
                       %span
-                      = "#{route[:name]} - #{route[:router_name]}"
+                      = "#{route[:vehicle_name]} - #{route[:router_name]}"
                   %span.select2-selection__arrow{role: "presentation"}
                     %b{role: "presentation"}
               %span.dropdown-wrapper{"aria-hidden": "true"}
@@ -71,7 +71,7 @@
       .route-details
         .route-stops{class: (optimum if route[:optimized_at_formatted])}
           .panel-body
-            = render partial: 'routes/edit_head', locals: { route: route }
+            = render partial: 'routes/edit_head', locals: { route: route, summary: summary }
           - if route[:store_start]
             %ul.stops.list-group{ style: ("display: none" if route[:hidden]) }
               %li.d-fake-flex.align-items-center.list-group-item{class:('ui-state-error' if route[:store_start][:error]), "data-store_id": route[:id]}
