Planning - Fix out_route

--- a/app/views/routes/_out_of_route.html.haml
+++ b/app/views/routes/_out_of_route.html.haml
@@ -1,3 +1,4 @@
+- updated_routes ||= nil
 - routes ||= updated_routes
 - route ||= routes.find{ |route| route[:vehicle_id].nil? }
 - out_pagy ||= nil
