--- a/app/views/plannings/_edit.html.haml
+++ b/app/views/plannings/_edit.html.haml
@@ -19,6 +19,7 @@
           %button.btn.btn-default.btn-sm.sidebar-close{title: t('.collapse_planning_panel'), type: "button"}
             %i.fa.fa-caret-left
       #planning_tools.row
+        #route_selector.row
         - if @callback_button && @planning.customer.default_callback_enabled? && @planning.customer.default_callback_url
           %p.text-center.col-md-12
             %button#external-callback-btn.btn.btn-primary.btn-sm.customer_external_callback_url{"data-url": @planning.customer.external_callback_url, type: "button"}
