--- a/app/views/routes/_edit_head.html.haml
+++ b/app/views/routes/_edit_head.html.haml
@@ -215,7 +215,7 @@
               %a.send_sms{href: "/api/0.1/plannings/#{summary[:planning_id]}/routes/#{route[:route_id]}/send_sms"}
                 %i.fa.fa-mobile.fa-fw
                 = t('plannings.edit.send_sms')
-      - elsif route[:manage_print]
+      - elsif @manage_planning[:manage_print]
         %a.btn.btn-default.btn-xs{href: "/api-web/0.1/plannings/#{summary[:planning_id]}/routes/#{route[:route_id]}/print", target: "_blank", title: t('plannings.edit.export.print')}
           %i.fa.fa-print.fa-fw
 .row.route-data{"data-route-id": route[:route_id]}
