Planning - Fix focus

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -894,7 +894,7 @@ $sidebar-margins: 10px;
           }
         }
 
-        *[data-store_id] .title {
+        *[data-store-id] .title {
           max-width: 260px;
         }
       }
