--- a/app/views/plannings/_selector.html.haml
+++ b/app/views/plannings/_selector.html.haml
@@ -1,6 +1,6 @@
 .col-xs-12.multiple
   %label
-    = t('activerecord.models.route')
+    = t('routes_by_vehicles.show.title')
   - to_select_options = [{name: t('web.select2.route_clear'), route_id: 'clear', hidden: true, locked: true, class: 'global'}]
   - to_select_options << {name: t('web.select2.route_reverse'), route_id: 'reverse', hidden: true, locked: true, class: 'global'}
   - to_select_options << {name: t('web.select2.route_all'), route_id: 'all', hidden: true, locked: true, class: 'global'}
